envoyfilter-teaching/envoyfilter/cluster/cluster-cluster_type-aggregate.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: cluster
  namespace: istio-system 
spec:
  workloadSelector:
    labels:
      istio: ingressgateway
  configPatches:
  - applyTo: NETWORK_FILTER
    match:
      context: GATEWAY
      listener:
        portNumber: 8080
        filterChain:
          filter:
            name: "envoy.filters.network.http_connection_manager"
    patch:
      operation: MERGE
      value:
              name: envoy.filters.network.http_connection_manager
              typedConfig:
                '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                route_config:
                  name: test
                  virtual_hosts:
                  - name: test
                    domains:
                    - "*"
                    routes:
                    - name: testroute
                      match: 
                        prefix: /
                      route:
                        cluster: aggregate_cluster
  - applyTo: CLUSTER
    patch:
      operation: ADD
      value:
        name: aggregate_cluster
        connect_timeout: 0.25s
        lb_policy: CLUSTER_PROVIDED
        cluster_type:
          name: envoy.clusters.aggregate
          typed_config:
            "@type": type.googleapis.com/envoy.extensions.clusters.aggregate.v3.ClusterConfig
            clusters:
            - outbound|9080||productpage.istio-2.svc.cluster.local
            - outbound|9080||productpage.istio.svc.cluster.local
